plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.1'
	id 'io.spring.dependency-management' version '1.1.0'
	id("io.freefair.lombok") version "8.1.0"
}

group = 'com.solarisgroup.demo'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	implementation 'org.postgresql:postgresql:42.5.1'
	implementation 'org.flywaydb:flyway-core:9.8.1'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.hamcrest:hamcrest:2.2'
	testImplementation 'com.h2database:h2:2.1.214'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.register("bootRunLocal") {
	group = "application"
	doFirst {
		tasks.bootRun.configure {
			systemProperty("spring.profiles.active", "local")
		}
	}
	finalizedBy("bootRun")
}
